feat: use hazelcast caching