@@ -12,9 +12,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
-        <kotlin.compiler.jvmTarget>11</kotlin.compiler.jvmTarget>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <jvmTarget>12</jvmTarget>
+        <kotlin.compiler.jvmTarget>${jvmTarget}</kotlin.compiler.jvmTarget>
+        <maven.compiler.source>${jvmTarget}</maven.compiler.source>
+        <maven.compiler.target>${jvmTarget}</maven.compiler.target>
 
         <kotlin-logging.version>1.7.6</kotlin-logging.version>
         <kotlin.version>1.3.50</kotlin.version>
@@ -39,6 +40,7 @@
         <openapi-generator-maven-plugin.version>4.1.2</openapi-generator-maven-plugin.version>
         <gitflow-maven-plugin.version>1.13.0</gitflow-maven-plugin.version>
         <dockerfile-maven.version>1.4.12</dockerfile-maven.version>
+        <cache-api.version>1.1.1</cache-api.version>
     </properties>
 
     <dependencyManagement>
@@ -61,6 +63,21 @@
         <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-hazelcast</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.hazelcast</groupId>
+                    <artifactId>hazecast</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.hazelcast</groupId>
+            <artifactId>hazelcast</artifactId>
+            <version>3.12.2</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
@@ -88,6 +105,11 @@
                     <artifactId>c3p0</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>javax.cache</groupId>
+            <artifactId>cache-api</artifactId>
+            <version>${cache-api.version}</version>
         </dependency>
         <dependency>
             <groupId>com.mchange</groupId>
@@ -251,6 +273,7 @@
                                 <NASA_API_KEY_ARG>${env.NASA_API_KEY}</NASA_API_KEY_ARG>
                                 <NASA_API_HOST_ARG>${env.NASA_API_HOST}</NASA_API_HOST_ARG>
                                 <NASA_API_PATH_ARG>${env.NASA_API_PATH}</NASA_API_PATH_ARG>
+                                <CACHE_POOL_SIZE_ENTRIES_ARG>${env.CACHE_POOL_SIZE_ENTRIES}</CACHE_POOL_SIZE_ENTRIES_ARG>
                             </buildArgs>
                         </configuration>
                     </plugin>
@@ -267,11 +290,7 @@
                 <artifactId>kotlin-maven-plugin</artifactId>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <configuration>
-                    <jvmTarget>11</jvmTarget>
-                    <javacOptions>
-                        <option>--add-opens</option>
-                        <option>jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</option>
-                    </javacOptions>
+                    <jvmTarget>${jvmTarget}</jvmTarget>
                 </configuration>
                 <executions>
                     <execution>
@@ -348,26 +367,6 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <proc>none</proc>
-                    <compilerArgs>
-                        <arg>--add-modules</arg>
-                        <arg>java.se</arg>
-                        <arg>--add-exports</arg>
-                        <arg>java.base/jdk.internal.ref=ALL-UNNAMED</arg>
-                        <arg>--add-opens</arg>
-                        <arg>java.base/java.lang</arg>
-                        <arg>--add-opens</arg>
-                        <arg>jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
-                        <arg>--add-opens</arg>
-                        <arg>java.base/java.nio=ALL-UNNAMED</arg>
-                        <arg>--add-opens</arg>
-                        <arg>java.base/sun.nio.ch=ALL-UNNAMED</arg>
-                        <arg>--add-opens</arg>
-                        <arg>java.management/sun.management=ALL-UNNAMED</arg>
-                        <arg>--add-opens</arg>
-                        <arg>jdk.management/com.sun.management.internal=ALL-UNNAMED</arg>
-                        <arg>--add-opens</arg>
-                        <arg>jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
-                    </compilerArgs>
                 </configuration>
                 <executions>
                     <execution>
